--- a/app/src/main/res/drawable/signup_1.xml
+++ b/app/src/main/res/drawable/signup_1.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle"
-            >
-            <solid android:color="#e1e1e1"/>
-                <corners android:radius="15dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-        </shape>
+    <solid android:color="#FFFFFF"/>
+    <stroke android:color="#FF6813" android:width="2dp"/>
+    <corners android:radius="7dp"/>
 
 
-    </item>
-
-</selector>
+</shape>
