--- a/app/src/main/res/layout/fragment_personaal.xml
+++ b/app/src/main/res/layout/fragment_personaal.xml
@@ -1,8 +1,11 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -48,9 +51,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        android:text="Personal Info"
         android:layout_marginStart="7dp"
         android:layout_marginTop="5dp"
-        android:text="Personal Info"
         android:textColor="#091020"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,12 +75,14 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="0dp"
-        android:layout_height="192dp"
+        android:layout_height="190dp"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:cardElevation="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/textViewcchange"
-        app:layout_constraintStart_toStartOf="@+id/textView11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -120,7 +125,6 @@
                 android:layout_marginTop="2dp"
                 android:background="@color/black"
                 app:layout_constraintBottom_toTopOf="@+id/textViewss"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
@@ -228,8 +232,6 @@
         android:layout_width="0dp"
         android:layout_height="180dp"
         android:layout_margin="7dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -336,5 +338,10 @@
 
     </androidx.cardview.widget.CardView>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="409dp"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="632dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
