--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -21,15 +21,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+         android:layout_marginEnd="16dp"
+        android:elevation="20dp"
+        android:src="@drawable/img_7"
+        app:civ_border_color="#FF6813"
+        app:civ_border_width="0.5dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profile" />
+        app:srcCompat="@drawable/profile"
+         />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -88,6 +97,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/image_tl"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/shape_bo"
@@ -234,11 +244,28 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_recyclerview"
         android:layout_width="0dp"
-        android:layout_marginTop="10dp"
         android:layout_height="220dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/list_recyclerview" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/list_recyclerview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
