--- a/app/src/main/res/layout/activity_control_panel.xml
+++ b/app/src/main/res/layout/activity_control_panel.xml
@@ -21,7 +21,7 @@
         android:id="@+id/imageView5"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
         android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView18"
         app:layout_constraintStart_toStartOf="@+id/constraintLayout"
@@ -56,6 +56,7 @@
         app:layout_constraintStart_toStartOf="@+id/add_new_products">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/profile_all"
             android:layout_width="match_parent"
            android:background="@drawable/stroke"
             android:layout_height="match_parent">
@@ -167,6 +168,7 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/stroke">
