--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -6,25 +6,28 @@
     android:layout_height="match_parent"
     android:background="#E5E5E5"
     tools:context=".Details">
+
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/My_favorite"
+        android:layout_width="25dp"
+        android:layout_height="30dp"
         android:layout_marginTop="16dp"
+        android:scaleType="fitXY"
         android:layout_marginEnd="16dp"
+        android:src="@drawable/book2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_rectangle_344" />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="285dp"
@@ -35,6 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
         app:srcCompat="@drawable/popularfood3" />
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -111,31 +115,30 @@
         app:layout_constraintEnd_toEndOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:textStyle="bold"
 
-        android:text="chicken FOOD"
-        android:textColor="#FF6813"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView10"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="chicken FOOD"-->
+
+<!--        android:textColor="#FF6813"-->
+<!--        android:textSize="15sp"-->
+<!--        android:textStyle="bold"-->
+<!--        tools:layout_editor_absoluteX="16dp"-->
+<!--        tools:layout_editor_absoluteY="443dp" />-->
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
 
         android:text="Float Cake Vietnam"
         android:textColor="#091020"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintStart_toStartOf="@+id/textView12"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+
     <TextView
         android:id="@+id/textView12"
         android:layout_width="0dp"
@@ -149,6 +152,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="40dp"
@@ -188,21 +192,33 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
 
-        android:text="$5.78"
+        android:text="5.78"
         android:textColor="#272670"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView11" />
 
+    <TextView
+        android:id="@+id/najmh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="$"
+        android:textColor="#272670"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView14"
+        app:layout_constraintEnd_toStartOf="@+id/textView14"
+        app:layout_constraintTop_toTopOf="@+id/textView14" />
+
     <Button
         android:id="@+id/add"
         android:layout_width="285dp"
         android:layout_height="50dp"
-        android:background="@drawable/shape_bo"
-        android:layout_marginBottom="28dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/shape_bo"
         android:backgroundTint="#FF6813"
         android:text="ADD TO CART"
         android:textColor="@color/white"
@@ -211,6 +227,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.63" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
