--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,14 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
     tools:context=".cart">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="3" />
+   <androidx.constraintlayout.widget.ConstraintLayout
+       android:id="@+id/constraintLayout"
+       android:layout_width="0dp"
+       android:layout_height="70dp"
+       android:background="#FF6813"
 
-</FrameLayout>
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent" />
+
+   <TextView
+       android:id="@+id/textView23"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:fontFamily="@font/lato"
+       android:text="My Basket"
+       android:background="#FF6813"
+       android:textSize="22sp"
+       android:textStyle="bold"
+       app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent" />
+
+   <ImageView
+       android:id="@+id/imageView_back"
+       android:layout_width="35dp"
+       android:layout_height="35dp"
+       android:layout_marginStart="16dp"
+       android:layout_marginTop="16dp"
+
+       android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent" />
+
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/recyclerview"
+       android:layout_width="0dp"
+       android:layout_height="433dp"
+       android:layout_margin="10dp"
+
+
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+   <androidx.cardview.widget.CardView
+       android:id="@+id/cardView4"
+       android:layout_width="0dp"
+       android:layout_height="65dp"
+       android:layout_marginStart="10dp"
+       android:layout_marginEnd="10dp"
+
+       android:layout_marginBottom="25dp"
+       app:cardCornerRadius="10dp"
+       app:cardElevation="10dp"
+
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent">
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:background="#FF6813"
+
+          >
+
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             android:text="Go to Checkout"
+             android:textColor="#FFFFFF"
+             android:textSize="25sp"
+             android:textStyle="bold"
+
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toTopOf="parent" />
+
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+   </androidx.cardview.widget.CardView>
+
+   <TextView
+       android:id="@+id/tital"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:text="tital"
+       android:layout_marginTop="20dp"
+       android:textColor="#000000"
+       android:textSize="27sp"
+       android:textStyle="bold"
+       app:layout_constraintStart_toStartOf="@+id/recyclerview"
+       app:layout_constraintTop_toBottomOf="@+id/recyclerview" />
+
+   <TextView
+       android:id="@+id/tital_number"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:layout_marginStart="15dp"
+       android:text=""
+       android:textColor="#000000"
+       android:textSize="25sp"
+       android:textStyle="normal"
+       app:layout_constraintBottom_toBottomOf="@+id/tital"
+       app:layout_constraintStart_toEndOf="@+id/tital"
+       app:layout_constraintTop_toTopOf="@+id/tital" />
+
+   <TextView
+       android:id="@+id/items"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:layout_marginTop="5dp"
+       android:text="items"
+       android:textColor="#000000"
+       android:textSize="23sp"
+       android:textStyle="bold"
+       app:layout_constraintBottom_toTopOf="@+id/cardView4"
+       app:layout_constraintStart_toStartOf="@+id/tital"
+       app:layout_constraintTop_toBottomOf="@+id/tital" />
+
+   <TextView
+       android:id="@+id/items_number"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:layout_marginStart="12dp"
+       android:text=""
+       android:textColor="#000000"
+       android:textSize="23sp"
+       android:textStyle="normal"
+       app:layout_constraintBottom_toBottomOf="@+id/items"
+       app:layout_constraintStart_toEndOf="@+id/items"
+       app:layout_constraintTop_toTopOf="@+id/items"
+       app:layout_constraintVertical_bias="0.0" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
