--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -61,15 +61,19 @@
         android:drawableLeft="@drawable/ic_search_black_24dp"
         android:drawablePadding="8dp"
         android:ems="10"
+        android:inputType="none"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:hint="@android:string/search_go"
-        android:inputType="textPersonName"
+
         android:paddingStart="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/btn_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/btn_search"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginEnd="16dp"
@@ -177,16 +181,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/all"
+                        android:layout_width="75dp"
+                        android:layout_height="45dp"
+                        android:layout_marginEnd="7dp"
+                        android:background="@drawable/shape2"
+                        android:gravity="center"
+                        android:text="All"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/Burger_id"
                         android:layout_width="110dp"
                         android:layout_height="45dp"
-                        android:background="@drawable/shape2"
-                        android:backgroundTint="#FF6813"
+                        android:background="@drawable/shep_22"
+
 
                         android:gravity="center"
                         android:text="Burger"
-                        android:textColor="#FFFFFF"
+                        android:textColor="#000000"
                         android:textSize="20sp"
 
                         android:textStyle="bold"
@@ -195,10 +213,11 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/Pizza_id"
                         android:layout_width="95dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="7dp"
-                        android:background="@drawable/shape2"
+                        android:background="@drawable/shep_22"
                         android:gravity="center"
                         android:text="Pizza"
                         android:textColor="#000000"
@@ -208,10 +227,11 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/Sandwich_id"
                         android:layout_width="110dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="7dp"
-                        android:background="@drawable/shape2"
+                        android:background="@drawable/shep_22"
                         android:gravity="center"
                         android:text="Sandwich"
                         android:textColor="#000000"
@@ -220,18 +240,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:layout_width="110dp"
-                        android:layout_height="45dp"
-                        android:layout_marginStart="7dp"
-                        android:background="@drawable/shape2"
-                        android:gravity="center"
-                        android:text="Sandwich"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+
 
 
                 </LinearLayout>
@@ -255,6 +264,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_recyclerview" />
@@ -264,6 +274,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_recyclerview" />
 
